fix apply now overlap on mobile
Former-commit-id: 9656a93f0af3bf0a4befb52e988736d74564839e

--- a/css/styles.css
+++ b/css/styles.css
@@ -5304,6 +5304,9 @@ a.light-button-full {
 	float:right;
 }
 
+.current-jobs {
+	padding-bottom: 60px;
+}
 
 a.applyhere {
 	position:absolute;
